--- a/Services/Peripherals/Peripherals.csproj
+++ b/Services/Peripherals/Peripherals.csproj
@@ -10,18 +10,53 @@
     <AssemblyName>Peripherals</AssemblyName>
     <OutputPath>..\..\POS\bin\$(Configuration)\services\</OutputPath>
   </PropertyGroup>
-  <PropertyGroup Condition="'$(Configuration)' == 'Debug'">
-    <UseVSHostingProcess>false</UseVSHostingProcess>
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Interop.OposPOSPrinter, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>OposInterop\Interop.OposPOSPrinter.dll</HintPath>
+    <Reference Include="DataAccess">
+      <HintPath>C:\Program Files (x86)\Microsoft Dynamics AX\60\Retail POS\DataAccess.DLL</HintPath>
     </Reference>
-    <Reference Include="Interop.OposSigCap, Version=5.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+    <Reference Include="Interop.OposCashDrawer">
+      <HintPath>$(PosInstallPath)\Services\Interop.OposCashDrawer.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Interop.OposConstants">
+      <HintPath>$(PosInstallPath)\Services\Interop.OposConstants.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Interop.OposKeyLock">
+      <HintPath>$(PosInstallPath)\Services\Interop.OposKeyLock.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Interop.OposLineDisplay">
+      <HintPath>$(PosInstallPath)\Services\Interop.OposLineDisplay.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Interop.OposMSR">
+      <HintPath>$(PosInstallPath)\Services\Interop.OposMSR.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Interop.OposPinPad">
+      <HintPath>$(PosInstallPath)\Services\Interop.OposPinPad.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Interop.OposPOSPrinter">
+      <HintPath>$(PosInstallPath)\Services\Interop.OposPOSPrinter.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Interop.OposScale">
+      <HintPath>$(PosInstallPath)\Services\Interop.OposScale.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Interop.OposScanner">
+      <HintPath>$(PosInstallPath)\Services\Interop.OposScanner.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Interop.OposSigCap">
+      <HintPath>$(PosInstallPath)\Services\Interop.OposSigCap.dll</HintPath>
+      <Private>False</Private>
+    </Reference>
+    <Reference Include="Microsoft.Dynamics.Retail.Diagnostics, Version=6.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <EmbedInteropTypes>False</EmbedInteropTypes>
-      <HintPath>OposInterop\Interop.OposSigCap.dll</HintPath>
+      <HintPath>..\..\..\..\..\..\..\Program Files (x86)\Microsoft Dynamics AX\60\Retail POS\Microsoft.Dynamics.Retail.Diagnostics.DLL</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.Prism">
       <HintPath>$(PosInstallPath)\Microsoft.Practices.Prism.dll</HintPath>
@@ -45,21 +80,16 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
-    <Reference Include="Interop.OposCashDrawer" />
-    <Reference Include="Interop.OposConstants" />
-    <Reference Include="Interop.OposKeyLock" />
-    <Reference Include="Interop.OposLineDisplay" />
-    <Reference Include="Interop.OposMSR" />
-    <Reference Include="Interop.OposPinPad" />
-    <Reference Include="Interop.OposScale" />
-    <Reference Include="Interop.OposScanner" />
-    <Reference Include="DevExpress.Data.v16.2">
+    <Reference Include="DevExpress.Data.v14.2">
+      <HintPath>$(PosInstallPath)\DevExpress.Data.v14.2.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="DevExpress.Utils.v16.2">
+    <Reference Include="DevExpress.Utils.v14.2">
+      <HintPath>$(PosInstallPath)\DevExpress.Utils.v14.2.dll</HintPath>
       <Private>False</Private>
     </Reference>
-    <Reference Include="DevExpress.XtraEditors.v16.2">
+    <Reference Include="DevExpress.XtraEditors.v14.2">
+      <HintPath>$(PosInstallPath)\DevExpress.XtraEditors.v14.2.dll</HintPath>
       <Private>False</Private>
     </Reference>
   </ItemGroup>
@@ -76,10 +106,6 @@
       <HintPath>$(SDKPath)\Microsoft.Dynamics.Retail.Pos.Contracts.dll</HintPath>
       <Private>False</Private>
       <EmbedInteropTypes>True</EmbedInteropTypes>
-    </Reference>
-    <Reference Include="DataAccess">
-      <HintPath>$(PosInstallPath)\DataAccess.dll</HintPath>
-      <Private>False</Private>
     </Reference>
     <Reference Include="Microsoft.Dynamics.Retail.Pos.DataEntity">
       <HintPath>$(PosInstallPath)\Microsoft.Dynamics.Retail.Pos.DataEntity.dll</HintPath>
@@ -104,12 +130,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Barcode\Barcode.cs" />
+    <Compile Include="Barcode\BarcodeCode128.cs" />
     <Compile Include="Barcode\BarcodeCode39.cs" />
     <Compile Include="CashDrawer.cs" />
     <Compile Include="CashDrawerProxy.cs" />
     <Compile Include="DefaultFiscalPrinter.cs" />
     <Compile Include="DualDisplay.cs" />
-    <Compile Include="DualDisplayForm.cs" />
+    <Compile Include="DualDisplayForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="DualDisplayForm.designer.cs">
       <DependentUpon>DualDisplayForm.cs</DependentUpon>
     </Compile>
@@ -120,6 +149,7 @@
     <Compile Include="Peripherals.cs" />
     <Compile Include="PinPad.cs" />
     <Compile Include="Printer.cs" />
+    <Compile Include="PrinterHelper.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RFIDScanner.cs" />
     <Compile Include="Scale.cs" />
@@ -134,16 +164,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="OposInterop\Interop.OposCashDrawer.dll" />
-    <Content Include="OposInterop\Interop.OposConstants.dll" />
-    <Content Include="OposInterop\Interop.OposKeyLock.dll" />
-    <Content Include="OposInterop\Interop.OposLineDisplay.dll" />
-    <Content Include="OposInterop\Interop.OposMSR.dll" />
-    <Content Include="OposInterop\Interop.OposPinPad.dll" />
-    <Content Include="OposInterop\Interop.OposPOSPrinter.dll" />
-    <Content Include="OposInterop\Interop.OposScale.dll" />
-    <Content Include="OposInterop\Interop.OposScanner.dll" />
-    <Content Include="OposInterop\Interop.OposSigCap.dll" />
     <Content Include="Resources\Logo.jpg" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
