--- a/Services/PurchaseOrderReceiving/PurchaseOrderReceiving.csproj
+++ b/Services/PurchaseOrderReceiving/PurchaseOrderReceiving.csproj
@@ -51,6 +51,8 @@
     <Reference Include="System.Core">
     </Reference>
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Management" />
+    <Reference Include="System.Printing" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq">
