--- a/Services/EOD/EOD.csproj
+++ b/Services/EOD/EOD.csproj
@@ -109,6 +109,7 @@
       <HintPath>..\..\..\Program Files (x86)\Microsoft Dynamics AX\60\Retail POS\Microsoft.Dynamics.Retail.Pos.DataEntity.DLL</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="SystemSettings">
       <HintPath>..\..\..\Program Files (x86)\Microsoft Dynamics AX\60\Retail POS\SystemSettings.DLL</HintPath>
       <Private>False</Private>
