--- a/Services/Printing/Printing.csproj
+++ b/Services/Printing/Printing.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Printing.cs" />
     <Compile Include="PrintingActions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="XDocument.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="DataAccess">
@@ -101,6 +102,7 @@
       <HintPath>..\..\Program Files (x86)\Microsoft Dynamics AX\60\Retail POS\POSProcesses.DLL</HintPath>
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Xml.Linq" />
     <Reference Include="SystemSettings">
       <HintPath>..\..\Users\it.application\Desktop\Retail POS\SystemSettings.DLL</HintPath>
       <Private>False</Private>
