--- a/Services/InteractionDefaults/InteractionDefaults.csproj
+++ b/Services/InteractionDefaults/InteractionDefaults.csproj
@@ -12,7 +12,7 @@
     <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <OutputPath>..\..\..\..\..\..\..\Heron\Dll\</OutputPath>
+    <OutputPath>..\..\..\..\AX\Retail POS\Extensions\</OutputPath>
     <Optimize>false</Optimize>
     <Prefer32Bit>false</Prefer32Bit>
     <UseVSHostingProcess>false</UseVSHostingProcess>
@@ -25,6 +25,7 @@
     <Reference Include="APIAccess, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\..\..\..\..\..\..\Program Files (x86)\Microsoft Dynamics AX\60\Retail POS\Extensions\APIAccess.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="BlankOperations, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -32,12 +33,15 @@
     </Reference>
     <Reference Include="BusinessLogic">
       <HintPath>..\..\..\Program Files (x86)\Microsoft Dynamics AX\60\Retail POS\BusinessLogic.DLL</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="ButtonGrid">
       <HintPath>..\..\..\Program Files (x86)\Microsoft Dynamics AX\60\Retail POS\ButtonGrid.dll</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="DataAccess">
       <HintPath>..\..\..\Program Files (x86)\Microsoft Dynamics AX\60\Retail POS\DataAccess.DLL</HintPath>
+      <Private>False</Private>
     </Reference>
     <Reference Include="DevExpress.Data.v14.2">
       <Private>False</Private>
