--- a/Services/SalesOrder/SalesOrder.csproj
+++ b/Services/SalesOrder/SalesOrder.csproj
@@ -353,6 +353,7 @@
   -->
   <ItemGroup>
     <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagram2.cd" />
     <None Include="Resources\down.png" />
   </ItemGroup>
   <ItemGroup>
