--- a/Services/SalesInvoice/SalesInvoice.csproj
+++ b/Services/SalesInvoice/SalesInvoice.csproj
@@ -44,9 +44,7 @@
   <ItemGroup>
     <Compile Include="SalesInvoice.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="WinFormsTouch\frmGetSalesInvoice.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="WinFormsTouch\frmGetSalesInvoice.cs" />
     <Compile Include="WinFormsTouch\frmGetSalesInvoice.designer.cs">
       <DependentUpon>frmGetSalesInvoice.cs</DependentUpon>
     </Compile>
