--- a/Services/Infocodes/Infocodes.csproj
+++ b/Services/Infocodes/Infocodes.csproj
@@ -55,18 +55,12 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
-    <Compile Include="WinFormsTouch\frmInfocodeSubCodeBase.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="WinFormsTouch\frmInfocodeSubCodeBase.cs" />
     <Compile Include="WinFormsTouch\frmInfocodeSubCodeBase.designer.cs">
       <DependentUpon>frmInfocodeSubCodeBase.cs</DependentUpon>
     </Compile>
-    <Compile Include="WinFormsTouch\frmInfocodeSubCodeList.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="WinFormsTouch\frmInfoSubCode.cs">
-      <SubType>Form</SubType>
-    </Compile>
+    <Compile Include="WinFormsTouch\frmInfocodeSubCodeList.cs" />
+    <Compile Include="WinFormsTouch\frmInfoSubCode.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Microsoft.Dynamics.Retail.Notification.Contracts">
